--- a/AssessmentManager/Forms/MDIParent1.resx
+++ b/AssessmentManager/Forms/MDIParent1.resx
@@ -465,4 +465,21 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>125</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIiIiIiIiAAAAAAAiAAAAACIiIiIiIiID//3CIgAAAAA
+        iIiIiIiIiA/wAACIAAAAAIiIiIiIiAAA////CAAAAACIiIiIiIgAAP///wgAAAAAiIiIiIiIAAD//wAI
+        AAAAAIiICIiIgAAA////CAAAAACIiAiIiAAAAP////AAAAAAgAAAAIgAAAAP/w8IAAAAAAiICIgIAAAA
+        //8AiAAAAAAIiAiICAAAD///8IgAAAAACIgIiAgAAAAAAAAIAAAAAIiICIgIAAAAAAAACAAAAACIiAiI
+        CIAAAAAAAAgAAAAAgAAAAIiIAAAAAAiIAAAAAAiICIiIiIiIiIiIiAAAAAAIiAiIiIiIiIiIiIgAAAAA
+        CIgIiAiIiIiIiIiIAAAAAAiICIgIiIiIiIiIiAAAAAAIiAiICIiIiIiIiIgAAAAAgAAAAIiIiIiIiIiI
+        AAAAAIiICIiIiIiIiIiIiAAAAACIiAiIiIiIiIiIiIgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///////////////////////////AA
+        AA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AA
+        AA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP/////////////////////w==
+</value>
+  </data>
 </root>
